# DecisionTrees

./: reduced_iris.csv
.github/workflows/: cmake.yml
cpp/: CMakeLists.txt
cpp/include/: dataset.h  decisiontree.h  loss.h
cpp/src/: CMakeLists.txt  dataset.cc  decisiontree.cc  loss.cc
cpp/tests/: CMakeLists.txt  test_dataset.cc  test_decisiontree.cc  test_log_loss.cc
csharp/DecisionTrees/: DataSet.cs  DecisionTree.cs  GlobalUsings.cs  Loss.cs
csharp/DecisionTrees.UnitTests/: DataSetTest.cs  DecisionTrees.UnitTests.csproj  LogLossTests.cs
scala/DecisionTrees/: build.sbt
scala/DecisionTrees/src/main/scala/: DataSet.scala
scala/DecisionTrees/src/test/scala/: DataSetTest.scala
